add h2 database for persistent storage